# athena_eye_nomysql

./: .gitignore  DEPLOYMENT_POSTMORTEM.md  DOCKERNO_LINUX_DEPLOY_MANUAL.md  DOCKER_LINUX_DEPLOY_MANUAL.md  README.md  docker-compose.prod.yml  docker-compose.yml  generate_project_overview.py  generated_project_overview.md  init.sql  my.cnf
backend/: Dockerfile  athena_eye.db  pyproject.toml
backend/athena_eye_project/: background_worker.py  main.py  main_api.py
backend/athena_eye_project/analysis/: decision_engine.py  sentiment.py  volume_price.py
backend/athena_eye_project/archiving/: archiver.py
backend/athena_eye_project/config/: settings.py  stock_manager.py  stocks.json
backend/athena_eye_project/data_ingestion/: fetcher.py
backend/athena_eye_project/db/: database.py  models.py
backend/athena_eye_project/notifications/: email_sender.py
backend/athena_eye_project/utils/: logger.py
backend/test/: test_core_logic.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  vite.config.js
frontend/src/: App.vue
frontend/src/router/: index.js
frontend/src/views/: ArchiveView.vue  ConfigView.vue  DashboardView.vue
